--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PROGRAMA CIFRADO DEL CESAR</title>
-	<meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+  <!--Import bootstrap css-->
+  <link type="text/css" rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <h1>CIFRADO DEL CESAR</h1>
+    <h1 class="container text one">Cifrado del Cesar</h1>
 
-    <div>
-      <input id="cifrado-text" type="text" placeholder="Escribe tu frase">
-      <button id="btn-click">click</button>
+    <div class="container text">
+      <input id="cifrado-text" class="input" type="text" placeholder="Escribe tu frase">
+      <button id="btn-click" class="btn btn-primary">click</button>
+    </div>
+    <div class="container text">
+      <h3>tu frase cifrada:</h3><span id="cipher-text"></span>
     </div>
 
 	<script type="text/javascript" src="js/app.js"></script>
